--- a/index.html
+++ b/index.html
@@ -1,80 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body> 
-    <div class="card">
-        <div class="card-body row">
-          <div class="leftContainer col-3">  
-            <h1>Search for a City:</h1>
-            <div class="input-group">
-                <input type="text" class="form-control search" placeholder="search">
-                <div class="input-group-append">
-                        <button class="btn btn-success sbtn" type="button">Search</button> 
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Document</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link rel="stylesheet" href="style.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.7.0/moment.min.js" type="text/javascript"></script>
+    </head>
+    <body> 
+        <div class="card">
+            <div class="card-body row">
+              <div class="leftContainer col-3">  
+                <h1>Search for a City:</h1>
+                <div class="input-group">
+                    <input type="text" class="form-control search" placeholder="search">
+                    <div class="input-group-append">
+                            <button class="btn btn-success sbtn" type="button">Search</button> 
+                    </div>
+                </div>
+                <div class="btn-group-vertical" role="group" aria-label="Basic example">
                 </div>
             </div>
-            <div class="btn-group-vertical" role="group" aria-label="Basic example">
-            </div>
-        </div>
-        <div class="rightContainer col-8">
-            
-            <div class="card">
-                <div class="card-body cBodyRight">
-                    <h1 class="city"></h1>
-                    <h2 class="temp"></h2>
-                    <h2 class="humidity"></h2>
-                    <h2 class="windSpeed"></h2>
-                    <h2 class="UVIndex"></h2>
-                </div>
-              </div>
-              <h1>5-Day Forecast:</h1>
-              <div class="card-deck">
-               
-                <div class="card wCard">
-                  <div class="card-body">
-                    <h1 class="temp0"></h1>
-                    <h1 class="humidity0"></h1>
+            <div class="rightContainer col-8">   
+                <div class="card">
+                    <div class="card-body cBodyRight">
+                        <h1 class="city"></h1>
+                        <h2 class="date"></h2>
+                        <h2 class="temp"></h2>
+                        <h2 class="humidity"></h2>
+                        <h2 class="UVIndex"></h2>
+                    </div>
                   </div>
+                  <h1>5-Day Forecast:</h1>
+                  <div class="card-deck">
+                    <div class="card wCard">
+                      <div class="card-body">
+                        <h3 class="date0"></h1>
+                        <h3 class="temp0"></h3>
+                        <h3 class="humidity0"></h3>
+                      </div>
+                    </div>
+                    <div class="card wCard">
+                      <div class="card-body">
+                        <h3 class="date1"></h1>
+                        <h3 class="temp1"></h3>
+                        <h3 class="humidity1"></h3>
+                      </div>
+                    </div>
+                    <div class="card wCard">
+                      <div class="card-body">
+                        <h3 class="date2"></h1>
+                        <h3 class="temp2"></h1>
+                        <h3 class="humidity2"></h1>
+                      </div>
+                    </div>
+                    <div class="card wCard">
+                      <div class="card-body">
+                        <h3 class="date3"></h3>
+                        <h3 class="temp3"></h3>
+                        <h3 class="humidity3"></h3>
+                      </div>
+                    </div>
+                    <div class="card wCard">
+                      <div class="card-body">
+                        <h3 class="date4"></h3>
+                        <h3 class="temp4"></h3>
+                        <h3 class="humidity4"></h3>                
+                      </div>
+                    </div>
                 </div>
-
-                <div class="card wCard">
-                  <div class="card-body">
-                    <h1 class="temp1"></h1>
-                    <h1 class="humidity1"></h1>
-                  </div>
-                </div>
-
-                <div class="card wCard">
-                  <div class="card-body">
-                    <h1 class="temp2"></h1>
-                    <h1 class="humidity2"></h1>
-                  </div>
-                </div>
-
-                <div class="card wCard">
-                  <div class="card-body">
-                    <h1 class="temp3"></h1>
-                    <h1 class="humidity3"></h1>
-                  </div>
-                </div>
-                 <div class="card wCard">
-                  <div class="card-body">
-                    <h1 class="temp4"></h1>
-                    <h1 class="humidity4"></h1>
-                  </div>
-                </div>
-
-            </div>
-      </div>
-  </div> 
-</div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="script.js"></script>
-</body>
+          </div>
+      </div> 
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="script.js"></script>
+    </body>
 </html>
